--- a/index.html
+++ b/index.html
@@ -5,86 +5,110 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="BrightWave Enterprises - Affordable, quality student housing in Nigeria." />
   <title>BrightWave Enterprises</title>
-  <link rel="stylesheet" href="/assets/style.css" />
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="font-sans bg-gray-100 text-gray-800">
 
   <!-- Navigation Bar -->
-  <header>
-    <nav>
-      <h1>
-        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
-        BrightWave Enterprises
-      </h1>
-      <div class="menu-toggle">☰</div>
-      <ul>
-        <li><a href="/" class="active">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/hostels">Hostels</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/faq">FAQ</a></li>
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
+        <h1 class="text-2xl font-bold text-blue-600">BrightWave Enterprises</h1>
+      </div>
+      <button class="md:hidden menu-toggle text-2xl" aria-label="Toggle navigation menu">☰</button>
+      <ul class="hidden md:flex space-x-6 text-lg">
+        <li><a href="/" class="text-blue-600 font-semibold">Home</a></li>
+        <li><a href="/about" class="hover:text-blue-600">About</a></li>
+        <li><a href="/hostels" class="hover:text-blue-600">Hostels</a></li>
+        <li><a href="/contact" class="hover:text-blue-600">Contact</a></li>
+        <li><a href="/faq" class="hover:text-blue-600">FAQ</a></li>
       </ul>
     </nav>
+    <ul class="nav-links hidden bg-white shadow-md md:hidden flex-col items-center space-y-4 py-4">
+      <li><a href="/" class="text-blue-600 font-semibold">Home</a></li>
+      <li><a href="/about" class="hover:text-blue-600">About</a></li>
+      <li><a href="/hostels" class="hover:text-blue-600">Hostels</a></li>
+      <li><a href="/contact" class="hover:text-blue-600">Contact</a></li>
+      <li><a href="/faq" class="hover:text-blue-600">FAQ</a></li>
+    </ul>
   </header>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-image" style="background-image: url('/assets/images/who-we-are.jpg');">
-      <div class="hero-overlay">
-        <h1>Modern Housing, Lasting Impact</h1>
-        <p>Student-centered. Community-driven. Built to last.</p>
-        <a href="#projects" class="btn">Explore Our Projects</a>
-      </div>
+  <section class="hero relative h-[70vh] flex items-center justify-center bg-cover bg-center" style="background-image: url('/assets/images/who-we-are.jpg');">
+    <div class="absolute inset-0 bg-black opacity-50"></div>
+    <div class="relative text-center text-white px-4">
+      <h1 class="text-4xl md:text-5xl font-bold mb-4">Modern Housing, Lasting Impact</h1>
+      <p class="text-lg md:text-xl mb-6">Student-centered. Community-driven. Built to last.</p>
+      <a href="#projects" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition">Explore Our Projects</a>
     </div>
   </section>
 
   <!-- About Section -->
-  <section id="about" class="about">
-    <h2>Who We Are</h2>
-    <p>
-      BrightWave Enterprises is a real estate-driven movement committed to reshaping student accommodation in Nigeria. 
-      We create affordable, stylish, and secure hostels that support students’ growth while enriching the communities we build in.
-    </p>
-    <img src="/assets/images/brightwave-project-1.jpg" alt="Our Vision" class="about-img" />
+  <section id="about" class="container mx-auto px-4 py-16">
+    <h2 class="text-3xl font-bold text-center mb-8">Who We Are</h2>
+    <div class="flex flex-col md:flex-row items-center gap-8">
+      <p class="text-lg md:w-1/2">
+        BrightWave Enterprises is a real estate-driven movement committed to reshaping student accommodation in Nigeria. 
+        We create affordable, stylish, and secure hostels that support students’ growth while enriching the communities we build in.
+      </p>
+      <img src="/assets/images/brightwave-project-1.jpg" alt="Our Vision" class="md:w-1/2 rounded-lg shadow-lg" />
+    </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects">
-    <h2>Our Projects</h2>
-    <p>We're transforming ideas into infrastructure. Here's a look at what we're building.</p>
-    <div class="project-gallery">
-      <div class="project-card">
-        <img src="/assets/images/brightwave-project-1.jpg" alt="BrightWave Hostel Front" />
-        <h3>Hostel Project – Phase 1</h3>
-        <p>Located in Kwara State, our 10-room hostel is designed for convenience, community, and security.</p>
-      </div>
-      <div class="project-card">
-        <img src="/assets/images/brightwave-project-2.jpg" alt="BrightWave Hostel Layout" />
-        <h3>Architectural Layout</h3>
-        <p>Modern designs that meet comfort and student lifestyle — crafted with purpose and precision.</p>
+  <section id="projects" class="bg-gray-200 py-16">
+    <div class="container mx-auto px-4">
+      <h2 class="text-3xl font-bold text-center mb-8">Our Projects</h2>
+      <p class="text-lg text-center mb-12">We're transforming ideas into infrastructure. Here's a look at what we're building.</p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+          <img src="/assets/images/brightwave-project-1.jpg" alt="BrightWave Hostel Front" class="w-full h-48 object-cover" />
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">Hostel Project – Phase 1</h3>
+            <p>Located in Kwara State, our 10-room hostel is designed for convenience, community, and security.</p>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+          <img src="/assets/images/brightwave-project-2.jpg" alt="BrightWave Hostel Layout" class="w-full h-48 object-cover" />
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">Architectural Layout</h3>
+            <p>Modern designs that meet comfort and student lifestyle — crafted with purpose and precision.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Call to Action -->
-  <section class="cta">
-    <h2>Interested in Partnering or Investing?</h2>
-    <p>We’re always open to collaborative ideas that align with our mission.</p>
-    <a href="/contact" class="btn">Get In Touch</a>
+  <section class="cta bg-blue-600 text-white py-16 text-center">
+    <h2 class="text-3xl font-bold mb-4">Interested in Partnering or Investing?</h2>
+    <p class="text-lg mb-6">We’re always open to collaborative ideas that align with our mission.</p>
+    <a href="/contact" class="inline-block bg-white text-blue-600 px-6 py-3 rounded-lg hover:bg-gray-100 transition">Get In Touch</a>
   </section>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  <footer class="bg-gray-800 text-white py-8">
+    <div class="container mx-auto px-4 text-center">
+      <p class="mb-4">© 2025 BrightWave Enterprises. All rights reserved.</p>
+      <div class="flex justify-center space-x-6">
+        <a href="#" class="hover:text-blue-400">Facebook</a>
+        <a href="#" class="hover:text-blue-400">Twitter</a>
+        <a href="#" class="hover:text-blue-400">Instagram</a>
+      </div>
+    </div>
   </footer>
 
   <!-- Mobile Menu Script -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.menu-toggle');
-      const navLinks = document.querySelector('nav ul');
-      toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
+      const navLinks = document.querySelector('.nav-links');
+      toggle.addEventListener('click', () => {
+        navLinks.classList.toggle('hidden');
+        toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
+      });
     });
   </script>
 
