--- a/hostels.html
+++ b/hostels.html
@@ -3,58 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore student hostels by BrightWave Enterprises in Nigeria." />
   <title>Hostels | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="/assets/style.css" />
   <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="font-sans bg-gray-900 text-white">
 
   <!-- Navigation -->
-  <header>
-    <nav>
-      <h1>
-        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
-        BrightWave Enterprises
-      </h1>
-      <div class="menu-toggle">☰</div>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/hostels" class="active">Hostels</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/faq">FAQ</a></li>
+  <header class="bg-gray-800 shadow-md sticky top-0 z-50">
+    <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
+        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprises</h1>
+      </div>
+      <button class="md:hidden menu-toggle text-2xl text-white" aria-label="Toggle navigation menu">☰</button>
+      <ul class="hidden md:flex space-x-6 text-lg font-semibold">
+        <li><a href="/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="/hostels" class="text-blue-400 hover:text-blue-300">Hostels</a></li>
+        <li><a href="/about" class="hover:text-blue-300">About</a></li>
+        <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
+        <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
       </ul>
     </nav>
+    <ul class="nav-links hidden bg-gray-800 shadow-md md:hidden flex-col items-center space-y-4 py-4">
+      <li><a href="/" class="hover:text-blue-300 font-semibold">Home</a></li>
+      <li><a href="/hostels" class="text-blue-400 font-semibold hover:text-blue-300">Hostels</a></li>
+      <li><a href="/about" class="hover:text-blue-300">About</a></li>
+      <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
+      <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
+    </ul>
   </header>
 
   <!-- Hostels Page -->
-  <main class="hostels-listing">
+  <main class="hostels-listing container mx-auto px-4 py-16">
 
-    <section class="intro">
-      <h2>Our Hostels 🏡</h2>
-      <p>Explore our current and upcoming student hostel projects at BrightWave Enterprises.</p>
+    <section class="intro text-center">
+      <h2 class="text-4xl font-bold mb-4">Our Hostels 🏡</h2>
+      <p class="text-lg font-medium mb-12">Explore our current and upcoming student hostel projects at BrightWave Enterprises.</p>
     </section>
 
-    <section class="hostel-grid">
+    <section class="hostel-grid grid grid-cols-1 md:grid-cols-2 gap-8">
 
       <!-- Phase 1 - Ongoing Construction -->
-      <div class="hostel-card ongoing">
-        <img src="/assets/images/phase1/phase1-main-entrance.jpg" alt="BrightWave Phase 1 Hostel" />
-        <div class="hostel-info">
-          <h3>BrightWave Phase 1 Hostel</h3>
-          <p>10 Self-Contained Rooms · Private Bathrooms & Kitchens · 24/7 Security · Solar Power</p>
-          <span class="status-label ongoing-label">Ongoing Construction 🚧</span>
-          <a href="/hostels/detail" class="btn">View Details</a>
+      <div class="hostel-card bg-gray-700 rounded-lg shadow-lg overflow-hidden">
+        <img src="/assets/images/phase1/phase1-main-entrance.jpg" alt="BrightWave Phase 1 Hostel" class="w-full h-56 object-cover" />
+        <div class="hostel-info p-6">
+          <h3 class="text-2xl font-semibold mb-2">BrightWave Phase 1 Hostel</h3>
+          <p class="font-medium mb-4">10 Self-Contained Rooms · Private Bathrooms & Kitchens · 24/7 Security · Solar Power</p>
+          <span class="inline-block bg-yellow-500 text-gray-900 px-3 py-1 rounded-full text-sm font-semibold mb-4">Ongoing Construction 🚧</span>
+          <a href="/hostels/detail" class="block text-center bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition font-semibold">View Details</a>
         </div>
       </div>
 
       <!-- Phase 2 - Coming Soon -->
-      <div class="hostel-card coming-soon">
-        <img src="/assets/images/hostels/phase2-placeholder.jpg" alt="BrightWave Phase 2 Coming Soon" />
-        <div class="hostel-info">
-          <h3>BrightWave Phase 2 (Coming Soon)</h3>
-          <p>32-35 Rooms Planned · Extended Amenities · Constructing after Phase 1</p>
-          <span class="status-label coming-soon-label">Coming Soon ⚡</span>
+      <div class="hostel-card bg-gray-700 rounded-lg shadow-lg overflow-hidden">
+        <img src="/assets/images/hostels/phase2-placeholder.jpg" alt="BrightWave Phase 2 Coming Soon" class="w-full h-56 object-cover" />
+        <div class="hostel-info p-6">
+          <h3 class="text-2xl font-semibold mb-2">BrightWave Phase 2 (Coming Soon)</h3>
+          <p class="font-medium mb-4">32-35 Rooms Planned · Extended Amenities · Constructing after Phase 1</p>
+          <span class="inline-block bg-green-500 text-gray-900 px-3 py-1 rounded-full text-sm font-semibold mb-4">Coming Soon ⚡</span>
         </div>
       </div>
 
@@ -63,16 +71,26 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  <footer class="bg-gray-800 text-white py-8">
+    <div class="container mx-auto px-4 text-center">
+      <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
+      <div class="flex justify-center space-x-6">
+        <a href="#" class="hover:text-blue-400 font-semibold">Facebook</a>
+        <a href="#" class="hover:text-blue-400 font-semibold">Twitter</a>
+        <a href="#" class="hover:text-blue-400 font-semibold">Instagram</a>
+      </div>
+    </div>
   </footer>
 
   <!-- Mobile Menu Toggle -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.menu-toggle');
-      const navLinks = document.querySelector('nav ul');
-      toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
+      const navLinks = document.querySelector('.nav-links');
+      toggle.addEventListener('click', () => {
+        navLinks.classList.toggle('hidden');
+        toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
+      });
     });
   </script>
 
