--- a/contact.html
+++ b/contact.html
@@ -3,73 +3,99 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact BrightWave Enterprises for inquiries about student hostels in Nigeria." />
   <title>Contact Us | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="/assets/style.css" />
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="font-sans bg-gray-900 text-white">
 
   <!-- Navigation -->
-  <header>
-    <nav>
-      <h1>
-        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
-        BrightWave Enterprises
-      </h1>
-      <div class="menu-toggle">☰</div>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/hostels">Hostels</a></li>
-        <li><a href="/faq">FAQs</a></li>
-        <li><a href="/contact" class="active">Contact</a></li>
+  <header class="bg-gray-800 shadow-md sticky top-0 z-50">
+    <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
+        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprises</h1>
+      </div>
+      <button class="md:hidden menu-toggle text-2xl text-white" aria-label="Toggle navigation menu">☰</button>
+      <ul class="hidden md:flex space-x-6 text-lg font-semibold">
+        <li><a href="/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
+        <li><a href="/about" class="hover:text-blue-300">About</a></li>
+        <li><a href="/contact" class="text-blue-400 hover:text-blue-300">Contact</a></li>
+        <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
       </ul>
     </nav>
+    <ul class="nav-links hidden bg-gray-800 shadow-md md:hidden flex-col items-center space-y-4 py-4">
+      <li><a href="/" class="hover:text-blue-300 font-semibold">Home</a></li>
+      <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
+      <li><a href="/about" class="hover:text-blue-300">About</a></li>
+      <li><a href="/contact" class="text-blue-400 font-semibold hover:text-blue-300">Contact</a></li>
+      <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
+    </ul>
   </header>
 
   <!-- Contact Page Content -->
-  <main class="contact">
-    <section class="contact-intro">
-      <h2>Contact Us 📬</h2>
-      <p>
+  <main class="contact container mx-auto px-4 py-16">
+    <section class="contact-intro text-center">
+      <h2 class="text-4xl font-bold mb-4">Contact Us 📬</h2>
+      <p class="text-lg font-medium mb-8 max-w-2xl mx-auto">
         Whether you're a future tenant, investor, or curious about what we do — we’d love to hear from you.
         Fill out the form below and someone from our team will get back to you shortly.
       </p>
-      <img src="/assets/images/customer-service.png" alt="Customer Support" style="max-width: 100px; margin: 25px auto;" />
+      <img src="/assets/images/customer-service.png" alt="Customer Support" class="max-w-[100px] mx-auto mb-8" />
     </section>
 
     <section class="contact-form">
-      <form id="contactForm">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="e.g. John Doe" required />
+      <form id="contactForm" class="max-w-lg mx-auto space-y-4">
+        <div>
+          <label for="name" class="block text-lg font-medium mb-2">Full Name</label>
+          <input type="text" id="name" name="name" placeholder="e.g. John Doe" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
+        </div>
 
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" placeholder="e.g. john@example.com" required />
+        <div>
+          <label for="email" class="block text-lg font-medium mb-2">Email Address</label>
+          <input type="email" id="email" name="email" placeholder="e.g. john@example.com" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
+        </div>
 
-        <label for="message">Your Message</label>
-        <textarea id="message" name="message" rows="6" placeholder="Type your message here..." required></textarea>
+        <div>
+          <label for="message" class="block text-lg font-medium mb-2">Your Message</label>
+          <textarea id="message" name="message" rows="6" placeholder="Type your message here..." required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400"></textarea>
+        </div>
 
-        <button type="submit">Send Message</button>
+        <button type="submit" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition font-semibold">Send Message</button>
       </form>
-      <div id="statusMessage" style="margin-top: 20px; font-weight: bold;"></div>
+      <div id="statusMessage" class="text-center mt-4 font-medium"></div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  <footer class="bg-gray-800 text-white py-8">
+    <div class="container mx-auto px-4 text-center">
+      <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
+      <div class="flex justify-center space-x-6">
+        <a href="#" class="hover:text-blue-400 font-semibold">Facebook</a>
+        <a href="#" class="hover:text-blue-400 font-semibold">Twitter</a>
+        <a href="#" class="hover:text-blue-400 font-semibold">Instagram</a>
+      </div>
+    </div>
   </footer>
 
   <!-- Mobile Menu Toggle -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.menu-toggle');
-      const navLinks = document.querySelector('nav ul');
-      toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
+      const navLinks = document.querySelector('.nav-links');
+      toggle.addEventListener('click', () => {
+        navLinks.classList.toggle('hidden');
+        toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
+      });
     });
   </script>
 
-  <!-- Contact Form Script -->
+  <!-- Contact Form Script (Commented out due to sandbox restrictions) -->
   <script>
+    /*
     document.getElementById("contactForm").addEventListener("submit", async function (e) {
       e.preventDefault();
 
@@ -102,6 +128,8 @@
         console.error("Error:", error);
       }
     });
+    */
+    // Note: Form submission is disabled due to sandbox restrictions. Implement server-side handling for the form at "https://brightwaveenterprises.online/api/contact".
   </script>
 
 </body>
